/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

import "orc8r/protos/common.proto";
import "feg/protos/health.proto";

package magma.feg;
option go_package = "magma/feg/cloud/go/protos";

message DisableMessage {
  uint64 disablePeriodSecs = 1;
}

// --------------------------------------------------------------------------
// ServiceHealth interface definition.
// --------------------------------------------------------------------------
service ServiceHealth {
  // Disable service functionality for the time specified in the request
  rpc Disable(DisableMessage) returns (magma.orc8r.Void) {}

  // Enable service functionality
  rpc Enable (magma.orc8r.Void) returns (magma.orc8r.Void) {}

  // Get health status of the service
  rpc GetHealthStatus(magma.orc8r.Void) returns (HealthStatus) {}
}